--- a/pom.xml
+++ b/pom.xml
@@ -24,8 +24,9 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.19.1</version>
 				<configuration>
-					<parallel>classes</parallel>
-					<threadCount>${testng.thread.count}</threadCount>
+					<configuration>
+       						<testFailureIgnore>true</testFailureIgnore>
+   					 </configuration>
 					<suiteXmlFiles>
 						<suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>
 					</suiteXmlFiles>
