--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -2,25 +2,25 @@
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
 
 name: Java CI with Maven
-
 on:
   push:
-    branches: [ main ]
+    branches: [ master ]
   pull_request:
-    branches: [ main ]
-
+    branches: [ master ]
 jobs:
   build:
+  
+runs-on: ubuntu-latest
 
-    runs-on: ubuntu-latest
-
-    steps:
+steps:
     - uses: actions/checkout@v2
-    - name: Set up JDK 8
-      uses: actions/setup-java@v2
+    - name: Set up JDK 1.8
+      uses: actions/setup-java@v1
       with:
-        java-version: '8'
-        distribution: 'adopt'
-        cache: maven
+        java-version: 1.8
+    - name:  Install Google Chrome # Using shell script to install Google Chrome
+      run:   |
+            chmod +x ./scripts/InstallChrome.sh
+                        ./scripts/InstallChrome.sh 
     - name: Build with Maven
-      run: mvn clean test
+        run: mvn test --file pom.xml
