--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,7 +24,6 @@ jobs:
         cache: maven
     - name:  Install Google Chrome # Using shell script to install Google Chrome
       run:   |
-              chmod +x ./InstallChrome.sh
-                          ./InstallChrome.sh 
+              chmod +x wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb sudo apt install ./google-chrome-stable_current_amd64.deb
     - name: Build with Maven
       run: mvn test --file pom.xml
