--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,6 +23,6 @@ jobs:
         distribution: 'adopt'
         cache: maven
     - name:  Install Google Chrome # Using shell script to install Google Chrome
-      run:   chmod +x | set -ex | wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb | sudo dpkg -i google-chrome-stable_current_amd64.deb
+      run:   chmod +x | set -ex | wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb | sudo dpkg -i ./google-chrome-stable_current_amd64.deb
     - name: Build with Maven
       run: mvn test --file pom.xml
