--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -26,3 +26,5 @@ jobs:
       run:   chmod +x | set -ex | wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb | sudo apt install ./google-chrome-stable_current_amd64.deb
     - name: Build with Maven
       run: mvn test --file pom.xml
+    - name: Publish Test Report
+      uses: scacap/action-surefire-report@v1
