--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,8 +22,8 @@ jobs:
         java-version: '8'
         distribution: 'adopt'
         cache: maven
-    - name:  Install Google Chrome # Using shell script to install Google Chrome
-      run:   chmod +x | set -ex | wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb | sudo apt-get install -f
+    - name: Install Chrome
+      uses: browser-actions/setup-chrome@latest
     - name: Build with Maven
       run: mvn test --file pom.xml
     - name: Publish Test Report
