--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -26,7 +26,11 @@ jobs:
       uses: browser-actions/setup-chrome@latest
     - name: Build with Maven
       run: mvn test --file pom.xml
-    - name: Publish Test Report
-      uses: scacap/action-surefire-report@v1
+    - name: Test Report
+      uses: dorny/test-reporter@v1
+      if: success() || failure()
       with:
-         report_paths: '**/test-output/junitreports/TEST-*.xml'
+        name: Test Results
+        path: ${{ github.workspace }}/target/surefire-reports/TEST-TestSuite.xml
+        reporter: java-junit
+        java-version: 8
